// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductIcon /> render renders the component 1`] = `
<span
  className="ce-icon ce-icon__product ce-icon--small"
  style={Object {}}
>
  <svg
    aria-hidden={true}
    className="ce-icon--white"
    role="img"
  >
    <title>
      music
    </title>
    <use
      xlinkHref="#icons_product-music"
    />
  </svg>
</span>
`;

exports[`<SecondaryIcon /> render renders the component with an icon 1`] = `
<span
  className="ce-icon ce-icon__secondary ce-icon--small ce-icon--primary"
  style={Object {}}
>
  <svg
    aria-hidden={true}
    className="ce-icon--white"
    role="img"
  >
    <title>
      image
    </title>
    <use
      xlinkHref="#icons_secondary-image"
    />
  </svg>
</span>
`;

exports[`<SecondaryIcon /> render renders the component with text 1`] = `
<span
  className="ce-icon ce-icon__secondary ce-icon--small ce-icon--primary"
  style={Object {}}
>
  <span
    className="ce-icon--text"
  >
    +1
  </span>
</span>
`;

exports[`<SystemIcon /> render renders the component 1`] = `
<span
  className="ce-icon ce-icon__system ce-icon--large"
  style={Object {}}
>
  <svg
    aria-hidden={true}
    className=""
    role="img"
  >
    <title>
      share
    </title>
    <use
      xlinkHref="#icons_system-share"
    />
  </svg>
</span>
`;
